<resources>
    <string name="app_name">appcoffee</string>
    <string name="content_text">is an espresso-based coffee drink that originated
in Italy, and is traditionally prepared with steamed
milk foam (microfoam)</string>
    <string name="introducer">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="errorNetwork">No Internet or something error</string>
    <string name="mess_clear">list product is empty</string>
    <string name="registration_text">Enter your phone number to continue:</string>
    <string name="registration_con">Continue</string>
    <string name="registration_verified">Enter verified code sent to:</string>
    <string name="registration_send_again">Send again.</string>
    <string name="registration_dont_rec">Don’t receive?</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!--order_cprofile layout-->
    <string name="profile_name">Name</string>
    <string name="profile_phone">Phone number</string>
    <string name="profile_email">Email</string>
    <string name="profile_wallet">My Wallet</string>
    <string name="profile_contact">Contact us about your order</string>
    <string name="profile_face">Facebook</string>
    <string name="profile_twitter">Twitter</string>
    <string name="profile_notification">Notification</string>
    <string name="profile_logout">Logout</string>
    <!--order_confirm layout-->
    <string name="order_pickup_address">Pickup address:</string>
    <string name="order_items">Order Items:</string>
    <string name="order_take_away">Takeaway</string>
    <string name="order_payment">Payment details:</string>
    <string name="order_add_new_card">Add new card</string>
    <string name="order_total">Total:</string>
    <string name="order_place">PLACE ORDER</string>
    <string name="order_placed">Order placed</string>
    <string name="order_prepare">Prepare</string>
    <string name="order_done">Done</string>
    <string name="order_no">order no:</string>
    <string name="order_in_progress">In progress</string>
    <string name="order_again">Order again</string>
    <string name="order_completed">Completed</string>

    <!--dialog update-->
    <string name="dialog_title">Update item</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_update">Update</string>
    <!--order_payment layout-->
    <string name="pay_card_number">Card number:</string>
    <string name="pay_card_holder">Card holder:</string>
    <string name="pay_expired_date">Expired date:</string>
    <string name="pay_select">Select</string>



    <string name="text_edit">edit</string>
    <string name="text_edit_2">Edit</string>
    <string name="text_delete">delete</string>

    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


</resources>
