<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_top_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550px"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/shape_bottom_border">
        <ImageView
            android:layout_width="320pt"
            android:layout_height="320px"
            android:src="@drawable/user_image" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:weightSum="2"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_name"
            android:textSize="@dimen/text_size_profile" />
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name"
            android:textSize="@dimen/text_size_profile"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:weightSum="2"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_phone"
            android:textSize="@dimen/text_size_profile" />
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name"
            android:textSize="@dimen/text_size_profile"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:weightSum="2"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_email"
            android:textSize="@dimen/text_size_profile" />
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name"
            android:textSize="@dimen/text_size_profile"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_wallet"
            android:textSize="@dimen/text_size_profile" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_contact"
            android:textSize="@dimen/text_size_profile" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_face"
            android:textSize="@dimen/text_size_profile" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_twitter"
            android:textSize="@dimen/text_size_profile" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_notification"
            android:textSize="@dimen/text_size_profile" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_drink_margin_left"
        android:paddingRight="@dimen/list_drink_margin_left"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_logout"
            android:textColor="@color/scarlet"
            android:textSize="@dimen/text_size_profile" />
    </LinearLayout>

</LinearLayout>