<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_layout_boder_large">
    <TextView
        android:id="@+id/tv_title_dialog_update"
        android:textSize="@dimen/size_18"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="@color/lightNavy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/dialog_title"
        android:gravity="center"
        android:background="@drawable/shape_bottom_border"/>
    <TextView
        android:id="@+id/tv_product_dialog_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/greyishBrown"
        android:text="Cappuchino [75% sugar, 50% ice]"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <ImageButton
            android:id="@+id/ibtn_sub_dialog_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sub_30dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_quantity_dialog_update"
            android:background="@null"/>
        <ImageButton
            android:id="@+id/ibtn_add_dialog_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_30dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_quantity_dialog_update"
            android:background="@null"/>
        <TextView
            android:textSize="@dimen/size_18"
            android:id="@+id/tv_quantity_dialog_update"
            android:text="1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/btn_cancel_dialog_update"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_cancel"
            android:gravity="center"
            android:textColor="@color/greyishBrown"/>
        <TextView
            android:id="@+id/btn_update_dialog_update"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/dialog_update"
            android:gravity="center"
            android:background="@color/lightNavy"
            android:textColor="@color/white"
            android:fontFamily="@font/opensans_semibold"/>

    </LinearLayout>

</LinearLayout>